--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "radium": "^0.26.2",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
+    "typeit-react": "^2.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
