--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.3.0",
+    "react-parallax": "^3.5.1",
+    "react-parallax-mouse": "^2.1.0",
     "react-router-dom": "^6.20.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
